[package]
authors = ['AxiaStake']
edition = '2018'
homepage = 'https://moonbeam.network'
license = 'GPL-3.0-only'
name = 'xcm-primitives'
repository = 'https://github.com/AxiaStake/moonbeam/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", default-features = false, optional = true, features = [
	"derive",
] }
axia-scale-codec = { version = "2.2", git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "1.0.0", git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, features = [
	"derive",
] }
log = "0.4"
hex = { version = "0.4", default-features = false }
sha3 = { version = "0.8", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
frame-support = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }

xcm = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }
xcm-builder = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }
xcm-executor = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }

[features]
default = ["std"]
std = [
	"axia-scale-codec/std",
	"serde/std",
	"hex/std",
	"sha3/std",
	"sp-std/std",
	"sp-runtime/std",
	"xcm/std",
	"xcm-builder/std",
]
