[package]
name = 'runtime-common'
description = 'Common code shared between runtimes'
homepage = 'https://moonbeam.network'
license = 'GPL-3.0-only'
version = '0.8.0-dev'
authors = ["AxiaStake"]
edition = '2018'

[dependencies]
pallet-migrations = { path = "../../pallets/migrations", default-features = false }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
frame-support = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-author-mapping = { path = "../../pallets/author-mapping", default-features = false }
allychain-staking = { path = "../../pallets/allychain-staking", default-features = false }
pallet-collective = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
log = "0.4"

[features]
std = [
	"pallet-migrations/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"pallet-author-mapping/std",
	"allychain-staking/std",
]
