[package]
name = "moonbeam-evm-tracer"
version = '0.1.0'
authors = ['AxiaStake']
edition = '2018'
homepage = 'https://moonbeam.network'
license = 'GPL-3.0-only'
repository = 'https://github.com/AxiaStake/moonbeam/'

[dependencies]
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.2", default-features = false }
fp-evm = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "7376782" }
pallet-evm = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "7376782" }
evm = { version = "0.30.1", default-features = false, features = [
	"with-codec",
] }
evm-runtime = { version = "0.30.0", default-features = false }
evm-gasometer = { version = "0.30.0", default-features = false }
sp-core = { default-features = false, git = "https://github.com/axia-tech/axlib.git", branch = "dev" }
sp-std = { default-features = false, git = "https://github.com/axia-tech/axlib.git", branch = "dev" }
sp-io = { default-features = false, git = "https://github.com/axia-tech/axlib.git", branch = "dev" }
sp-runtime = { default-features = false, git = "https://github.com/axia-tech/axlib.git", branch = "dev" }
evm-tracing-events = { path = "../../primitives/rpc/evm-tracing-events", default-features = false, features = [
	"evm-tracing",
] }
moonbeam-primitives-ext = { path = "../../primitives/ext", default-features = false }
ethereum-types = { git = "https://github.com/axia-tech/axia-common", branch = "master", version = "0.12.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"evm/std",
	"evm-runtime/std",
	"evm-gasometer/std",
	"evm/with-serde",
	"pallet-evm/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"ethereum-types/std",
	"fp-evm/std",
	"evm-tracing-events/std",
	"moonbeam-primitives-ext/std",
]
