[package]
name = 'moonriver-runtime'
description = 'Moonriver Runtime'
homepage = 'https://moonbeam.network'
license = 'GPL-3.0-only'
version = '0.8.4'
authors = ["AxiaStake"]
edition = '2018'
build = "build.rs"

[dependencies]
serde = { version = "1.0.101", default-features = false, optional = true, features = [
	"derive",
] }
axia-scale-codec = { version = "2.3.1", git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "1.0.0", git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, features = [
	"derive",
] }
log = "0.4"
rlp = { git = "https://github.com/axia-tech/axia-common", branch = "master", version = "0.5", default-features = false, optional = true }
sha3 = { version = "0.8", default-features = false, optional = true }

runtime-common = { path = "../common", default-features = false }

pallet-author-inherent = { git = "https://github.com/axia-tech/nimbus", branch = "94e54bd", default-features = false }
account = { path = "../../primitives/account/", default-features = false }
moonbeam-core-primitives = { path = "../../core-primitives", default-features = false }
pallet-ethereum-chain-id = { path = "../../pallets/ethereum-chain-id", default-features = false }
allychain-staking = { path = "../../pallets/allychain-staking", default-features = false }
allychain-staking-precompiles = { path = "../../precompiles/allychain-staking", default-features = false }
pallet-author-slot-filter = { git = "https://github.com/axia-tech/nimbus", branch = "94e54bd", default-features = false }
nimbus-primitives = { git = "https://github.com/axia-tech/nimbus", branch = "94e54bd", default-features = false }
pallet-migrations = { path = "../../pallets/migrations", default-features = false }
pallet-author-mapping = { path = "../../pallets/author-mapping", default-features = false }
pallet-maintenance-mode = { path = "../../pallets/maintenance-mode", default-features = false }
fp-evm = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }
pallet-proxy-genesis-companion = { path = "../../pallets/proxy-genesis-companion", default-features = false }
precompile-utils = { path = "../../precompiles/utils", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }
pallet-evm-precompile-dispatch = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }
pallet-evm-precompile-modexp = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }
pallet-evm-precompile-simple = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }
pallet-evm-precompile-sha3fips = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }
pallet-evm-precompile-blake2 = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }

# Axlib dependencies
sp-std = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-version = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-session = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-offchain = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-block-builder = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-transaction-pool = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-inherents = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }

frame-support = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
frame-executive = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-balances = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-randomness-collective-flip = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-timestamp = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-transaction-payment = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }

frame-system-rpc-runtime-api = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-utility = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }

# Frontier dependencies
fp-rpc = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }
fp-self-contained = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }
pallet-ethereum = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }
pallet-evm = { git = "https://github.com/axia-tech/frontier", default-features = false, branch = "master" }

pallet-democracy = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-scheduler = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-collective = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-society = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-proxy = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-treasury = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
pallet-identity = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }

pallet-crowdloan-rewards = { git = "https://github.com/axia-tech/crowdloan-rewards", default-features = false, branch = "master" }
crowdloan-rewards-precompiles = { path = "../../precompiles/crowdloan-rewards", default-features = false }

moonbeam-evm-tracer = { path = "../evm_tracer", optional = true, default-features = false }
evm-tracing-events = { path = "../../primitives/rpc/evm-tracing-events", optional = true, default-features = false }
moonbeam-rpc-primitives-debug = { path = "../../primitives/rpc/debug", default-features = false }
moonbeam-rpc-primitives-txpool = { path = "../../primitives/rpc/txpool", default-features = false }

# Cumulus dependencies
cumulus-pallet-allychain-system = { git = "https://github.com/axia-tech/cumulus", default-features = false, branch = "master" }
cumulus-primitives-core = { git = "https://github.com/axia-tech/cumulus", default-features = false, branch = "master" }
allychain-info = { git = "https://github.com/axia-tech/cumulus", default-features = false, branch = "master" }
cumulus-primitives-timestamp = { git = "https://github.com/axia-tech/cumulus", default-features = false, branch = "master" }

# Benchmarking dependencies
frame-benchmarking = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev", optional = true }
frame-system-benchmarking = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev", optional = true }

frame-try-runtime = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev", optional = true }

[dev-dependencies]
cumulus-test-relay-sproof-builder = { git = "https://github.com/axia-tech/cumulus", default-features = false, branch = "master" }
cumulus-primitives-allychain-inherent = { git = "https://github.com/axia-tech/cumulus", default-features = false, branch = "master" }
rlp = { git = "https://github.com/axia-tech/axia-common", branch = "master", version = "0.5" }
hex = "0.4"
sha3 = "0.9"

[build-dependencies]
axlib-wasm-builder = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

[features]
evm-tracing = ["moonbeam-evm-tracer", "evm-tracing-events", "sha3", "rlp"]
default = ["std"]
std = [
	"runtime-common/std",
	"axia-scale-codec/std",
	"serde",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-utility/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"evm-tracing-events/std",
	"moonbeam-rpc-primitives-debug/std",
	"moonbeam-rpc-primitives-txpool/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-ethereum-chain-id/std",
	"pallet-democracy/std",
	"pallet-scheduler/std",
	"pallet-collective/std",
	"pallet-author-inherent/std",
	"moonbeam-evm-tracer/std",
	"allychain-info/std",
	"cumulus-pallet-allychain-system/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"account/std",
	"moonbeam-core-primitives/std",
	"allychain-staking/std",
	"allychain-staking-precompiles/std",
	"pallet-author-slot-filter/std",
	"pallet-migrations/std",
	"pallet-crowdloan-rewards/std",
	"frame-benchmarking/std",
	"pallet-society/std",
	"pallet-proxy/std",
	"nimbus-primitives/std",
	"pallet-author-mapping/std",
	"pallet-maintenance-mode/std",
	"pallet-proxy-genesis-companion/std",
	"pallet-treasury/std",
	"scale-info/std",
	"fp-evm/std",
]

# Will be enabled by the `wasm-builder` when building the runtime for WASM.
runtime-wasm = []

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = ["sp-api/disable-logging"]

runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"allychain-staking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-society/runtime-benchmarks",
	"pallet-author-mapping/runtime-benchmarks",
	"pallet-crowdloan-rewards/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
]
try-runtime = [
	"frame-try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"pallet-collective/try-runtime",
	"allychain-staking/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-society/try-runtime",
	"pallet-author-mapping/try-runtime",
	#"pallet-crowdloan-rewards/try-runtime",
	"pallet-migrations/try-runtime",
]
