
[package]
name = "moonbeam-relay-encoder"
version = '0.1.0'
authors = ['AxiaStake']
edition = '2018'
homepage = 'https://moonbeam.network'
license = 'GPL-3.0-only'
repository = 'https://github.com/AxiaStake/moonbeam/'

[dependencies]
relay-encoder-precompiles = { path = "../../precompiles/relay-encoder/", default-features = false }
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1", default-features = false, features = [
    "derive",
] }
sp-runtime = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
cumulus-primitives-core = { git = "https://github.com/axia-tech/cumulus", default-features = false, branch = "master" }
pallet-staking = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-std = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
xcm-primitives = { path = "../../primitives/xcm", default-features = false }

[dev-dependencies]
axia-runtime = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axiatest-runtime = { git = "https://github.com/axia-tech/axia", branch = "dev" }
alphanet-runtime = { git = "https://github.com/axia-tech/axia", branch = "dev" }
betanet-runtime = { git = "https://github.com/axia-tech/axia", branch = "dev" }
pallet-proxy = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-utility = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

[features]
default = ["std"]
std = [
    "sp-std/std",
    "axia-scale-codec/std",
    "relay-encoder-precompiles/std",
    "pallet-staking/std",
    "cumulus-primitives-core/std",
    "sp-runtime/std",
    "axia-scale-codec/std",
    "frame-system/std",
    "xcm-primitives/std",
]
