[package]
name = "moonbeam-rpc-debug"
version = '0.1.0'
authors = ['AxiaStake']
edition = '2018'
homepage = 'https://moonbeam.network'
license = 'GPL-3.0-only'
repository = 'https://github.com/AxiaStake/moonbeam/'

[dependencies]
tokio = { version = "1.10", features = ["sync", "time"] }
futures = { version = "0.3", features = ["compat"] }
jsonrpc-core = { git = "https://github.com/axia-tech/jsonrpc", branch = "master", version = "18.0.0" }

ethereum = { git = "https://github.com/axia-tech/ethereum", branch = "master", version = "0.9.0", default-features = false, features = [
    "with-codec",
] }
ethereum-types = { git = "https://github.com/axia-tech/axia-common", branch = "master", version = "0.12.0" }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-blockchain = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-client-api = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-block-builder = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-utils = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

moonbeam-rpc-core-debug = { path = "../../rpc-core/debug" }
moonbeam-rpc-core-types = { path = "../../rpc-core/types" }
moonbeam-client-evm-tracing = { path = "../../evm-tracing" }
moonbeam-rpc-primitives-debug = { path = "../../../primitives/rpc/debug" }
fc-consensus = { git = "https://github.com/axia-tech/frontier", branch = "master" }
fc-db = { git = "https://github.com/axia-tech/frontier", branch = "master" }
fc-rpc = { git = "https://github.com/axia-tech/frontier", branch = "master", features = [
    "rpc_binary_search_estimate",
] }
fp-rpc = { git = "https://github.com/axia-tech/frontier", branch = "master" }
