[package]
name = "moonbeam-rpc-trace"
version = '0.6.0'
authors = ['AxiaStake']
edition = '2018'
homepage = 'https://moonbeam.network'
license = 'GPL-3.0-only'
repository = 'https://github.com/AxiaStake/moonbeam/'

[dependencies]
# Utils
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.9"
ethereum-types = { git = "https://github.com/axia-tech/axia-common", branch = "master", version = "0.12.0" }
ethereum = { git = "https://github.com/axia-tech/ethereum", branch = "master", version = "0.9.0", features = [
    "with-codec",
] }

# Async and logs
tokio = { version = "1.10", features = ["sync", "time"] }
futures = { version = "0.3" }
tracing = "0.1.25"

# Primitives
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-utils = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-blockchain = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-transaction-pool = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-block-builder = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
fp-rpc = { git = "https://github.com/axia-tech/frontier", branch = "master" }
moonbeam-rpc-primitives-debug = { path = "../../../primitives/rpc/debug" }

# Client and RPC
jsonrpc-core = { git = "https://github.com/axia-tech/jsonrpc", branch = "master", version = "18.0.0" }
sc-client-api = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-network = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
fc-rpc = { git = "https://github.com/axia-tech/frontier", branch = "master", features = [
    "rpc_binary_search_estimate",
] }
fc-consensus = { git = "https://github.com/axia-tech/frontier", branch = "master" }
fc-rpc-core = { git = "https://github.com/axia-tech/frontier", branch = "master" }
moonbeam-rpc-core-trace = { path = "../../rpc-core/trace" }
moonbeam-rpc-core-types = { path = "../../rpc-core/types" }
moonbeam-client-evm-tracing = { path = "../../evm-tracing" }
