[package]
name = "moonbeam-rpc-primitives-debug"
version = '0.1.0'
authors = ['AxiaStake']
edition = '2018'
homepage = 'https://moonbeam.network'
license = 'GPL-3.0-only'
repository = 'https://github.com/AxiaStake/moonbeam/'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false }
ethereum = { git = "https://github.com/axia-tech/ethereum", branch = "master", version = "0.9.0", default-features = false, features = [
	"with-codec",
] }
ethereum-types = { git = "https://github.com/axia-tech/axia-common", branch = "master", version = "0.12.0", default-features = false }

environmental = { version = "1.1.2", default-features = false }
sp-runtime = { git = "https://github.com/axia-tech/axlib.git", branch = "dev", default-features = false }
sp-api = { git = "https://github.com/axia-tech/axlib.git", branch = "dev", default-features = false }
sp-io = { git = "https://github.com/axia-tech/axlib.git", branch = "dev", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib.git", branch = "dev", default-features = false }
sp-core = { git = "https://github.com/axia-tech/axlib.git", branch = "dev", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
hex = { version = "0.4", features = ["serde"], optional = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"sp-core/std",
	"ethereum/std",
	"ethereum-types/std",
	"environmental/std",
	"serde",
	"serde_json",
	"hex",
]
